--- a/Admin/ManageUsers/managePersonnel.html
+++ b/Admin/ManageUsers/managePersonnel.html
@@ -19,7 +19,7 @@
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" rel="stylesheet">
 
     <!-- Custom styles for this template-->
-    <link href="../css/cssAdmin.css" rel="stylesheet">
+    <link href="../../css/cssAdmin.css" rel="stylesheet">
     <title>Personnel</title>
 
 </head>
@@ -110,8 +110,9 @@
         <h5> Here are the patients credentials. </h5>
         <input class="col-xs-12" type="input" name="username" placeholder="Username" disabled>
         <input class="col-xs-12" type="input" name="password" placeholder="Password" disabled>
-    </div>
         <button id = 'Add2'> Add </button>
+    </div>
+
 </div>
 
 <!--Modal for successful notification-->
@@ -121,9 +122,10 @@
         <br>
         <img src="../img/checkmark.png">
         <p> User Personnel successfully added. </p>
+        <button id = 'exit'> Close </button>
     </div>
     <!--instead of close change to Done-->
-    <button id = 'exit'> Close </button>
+
 </div>
 
 <script>
