--- a/Admin/ManageVaccine.html
+++ b/Admin/ManageVaccine.html
@@ -1,79 +1,144 @@
 <!---/***
-* @Author Hudson Kit P. Natividad
+* @Author Hudson Kit P. Natividad & Leslie Joy Palma
 * Date Created: June 28, 2021
 * Description: Main page of Manage Reports
 */
 ---->
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-    <meta charset="UTF-8">
-    <meta content="width=device-width, initial-scale=1.0, shrink-to-fit=no" name="viewport">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+    <title>Baguio SMIT+</title>
+
+    <!-- Our Custom CSS -->
+    <link href="/css/style.css" rel="stylesheet">
+    <link href="../css/cssAdmin.css" rel="stylesheet">
+    <!-- Bootstrap-->
     <script crossorigin="anonymous" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script crossorigin="anonymous" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script crossorigin="anonymous" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <link crossorigin="anonymous" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" rel="stylesheet">
-
-
-    <!-- Custom styles for this template-->
-    <link href="../css/cssAdmin.css" rel="stylesheet">
-    <title>Manage Vaccine</title>
-
+    <!-- Font Awesome JS -->
+    <script src="https://kit.fontawesome.com/fcdb0fe9f3.js" crossorigin="anonymous"></script>
+    <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/solid.js" integrity="sha384-tzzSw1/Vo+0N5UhStP3bvwWPq+uvzCMfrN1fEFe+xBmv1C/AtVX5K0uZtmcHitFZ" crossorigin="anonymous"></script>
+    <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/fontawesome.js" integrity="sha384-6OIrr52G08NpOFSZdxxz1xdNSndlD4vdcf/q2myIUVO0VsqaGHJsB0RaBE01VTOY" crossorigin="anonymous"></script>
 </head>
 
 <body>
+    <div class="wrapper">
+        <!-- Sidebar  -->
+        <nav id="sidebar">
+            <div class="sidebar-header">
+                <div class="sidebar-brand-icon">
+                    <img style="width:150px;" src="../img/SMIT+.png" alt="Baguio Logo">
+                </div>
+            </div>
 
-    <button type="button" class="button4 btn-primary" data-toggle="modal" data-target="#add-Vaccine">
-    Add Vaccine
-</button>
+            <ul class="list-unstyled components">
+                <p id="mainmenu">Main Menu</p>
+                <li class="active">
+                    <a href="#"><i class="fas fa-tachometer-alt"></i> Dashboard</a>
+                </li>
+                <li>
+                    <a href="#"><i class="fas fa-syringe"></i> Manage Vaccine</a>
+                </li>
+                <li>
+                    <a href="#ManageUsersSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle"><i class="fas fa-users"></i> Manage Users</a>
+                    <ul class="collapse list-unstyled" id="ManageUsersSubmenu">
+                        <li>
+                            <a href="#">Personnel</a>
+                        </li>
+                        <li>
+                            <a href="#">Patients</a>
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="#"><i class="fas fa-truck"></i> Manage Deployment</a>
+                </li>
+                <li>
+                    <a href="#"><i class="fas fa-sticky-note"></i> Reports</a>
+                </li>
+                <li>
+                    <a href="#"><i class="fas fa-question"></i> About</a>
+                </li>
+            </ul>
 
-    <div class="modal fade" id="addVaccine" tabindex="-1" role="dialog" aria-labelledby="add-Vaccine" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="add-VaccineTitle">Add Vaccine</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
+            <ul class="list-unstyled CTAs">
+                <button type="button" class="btn btn-info">
+                <span>Sign Out</span>
+            </button>
+            </ul>
+        </nav>
+
+        <!-- Page Content  -->
+        <div id="content">
+
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <div class="container-fluid">
+
+                    <button type="button" id="sidebarCollapse" class="btn btn-info">
+                    <i class="fas fa-align-left"></i>
+                    <span>Menu</span>
                 </button>
                 </div>
-                <div class="modal-body">
+            </nav>
+        </div>
 
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                    <button type="button" class="btn btn-primary">Save Changes</button>
-                    <button type="button" class="btn btn-secondary">Close</button>
+        <button type="button" class="button4 btn-primary" data-toggle="modal" data-target="#add-Vaccine">
+        Add Vaccine
+    </button>
+
+        <div class="modal fade" id="addVaccine" tabindex="-1" role="dialog" aria-labelledby="add-Vaccine" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="add-VaccineTitle">Add Vaccine</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                    </div>
+                    <div class="modal-body">
+
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                        <button type="button" class="btn btn-primary">Save Changes</button>
+                        <button type="button" class="btn btn-secondary">Close</button>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
 
-    <div class="search-container">
-        <form action="/action_page.php">
-            <input type="text" placeholder="Search" name="search">
-            <button type="submit"><i class="fa fa-search"></i>
-            <img id="searchButton" src="../img/magnifying-glass.png">
-        </button>
-        </form>
-    </div>
+        <div class="search-container">
+            <form action="/action_page.php">
+                <input type="text" placeholder="Search" name="search">
+                <button type="submit"><i class="fa fa-search"></i>
+                <img id="searchButton" src="../img/magnifying-glass.png">
+            </button>
+            </form>
+        </div>
 
-    <button id="addNewVaccineBtn" type="button" class="button4 btn-primary">
-    Add New Vaccine
-</button>
+        <button id="addNewVaccineBtn" type="button" class="button4 btn-primary">
+        Add New Vaccine
+    </button>
 
-    <div id="myModal" class="modal">
-        <div class="modal-content container">
-            <h2 id="headerAddNewVaccine">Add New Vaccine<span id="close" class="close">&times;</span></h2>
-            <div class="AddNewVaccine-PopUp">
-                <h4 class="addNewVaccineH3">Vaccine Details</h4>
-                <input class="vaccineName col-lg-12" type="input" name="vaccineName" placeholder="Vaccine Name">
-                <input class="vaccineManufacturer col-lg-12" type="input" name="vaccineManufacturer" placeholder="Vaccine Manufacturer">
-                <input class="vaccineDescription col-lg-12" type="input" name="vaccineDescription" placeholder="Vaccine Description">
+        <div id="myModal" class="modal">
+            <div class="modal-content container">
+                <h2 id="headerAddNewVaccine">Add New Vaccine<span id="close" class="close">&times;</span></h2>
+                <div class="AddNewVaccine-PopUp">
+                    <h4 class="addNewVaccineH3">Vaccine Details</h4>
+                    <input class="vaccineName col-lg-12" type="input" name="vaccineName" placeholder="Vaccine Name">
+                    <input class="vaccineManufacturer col-lg-12" type="input" name="vaccineManufacturer" placeholder="Vaccine Manufacturer">
+                    <input class="vaccineDescription col-lg-12" type="input" name="vaccineDescription" placeholder="Vaccine Description">
 
-                <h4 class="addNewVaccineH3">Vaccine Characteristics</h4>
-                <!-- <input class="col-xs-12" type="input" name="vaccineType" placeholder="Vaccine Type"> -->
-                <select class="form-select col-lg-12 vaccineType">
+                    <h4 class="addNewVaccineH3">Vaccine Characteristics</h4>
+                    <!-- <input class="col-xs-12" type="input" name="vaccineType" placeholder="Vaccine Type"> -->
+                    <select class="form-select col-lg-12 vaccineType">
                     <option selected disabled>Vaccine Type</option>
                     <option value="1">Inactivated Vaccine</option>
                     <option value="2">Live-attenuated Vaccine</option>
@@ -81,7 +146,7 @@
                 </select>
 
 
-                <!--- <input class="col-xs-12" type="input" name="vaccineEfficacy" placeholder="Vaccine Efficacy"> 
+                    <!--- <input class="col-xs-12" type="input" name="vaccineEfficacy" placeholder="Vaccine Efficacy">
                    <div class="dropdown">
                     <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   Vaccine Efficacy
@@ -94,53 +159,69 @@
                 </div>
                 -->
 
-                <select class="form-select col-lg-12 vaccineEfficacy">
+                    <select class="form-select col-lg-12 vaccineEfficacy">
                     <option selected disabled>Vaccine Efficacy</option>
                     <option value="1">90%</option>
                     <option value="1">70%</option>
                     <option value="1">50%</option>
                 </select>
 
-                <input class="col-lg-12 dosageRequired" type="input" name="vaccineType" placeholder="Dosage Required">
-                <input class="col-lg-12 dosageInterval" type="input" name="vaccineType" placeholder="Dosage Interval">
+                    <input class="col-lg-12 dosageRequired" type="input" name="vaccineType" placeholder="Dosage Required">
+                    <input class="col-lg-12 dosageInterval" type="input" name="vaccineType" placeholder="Dosage Interval">
 
-                <h4 class="addNewVaccineH3"> Storage and Handling</h4>
-                <input class="col-lg-12 minimumTemperature" type="input" name="vaccineEfficacy" placeholder="Minimum Temperature">
-                <input class="col-lg-12 maximumTemperature" type="input" name="vaccineType" placeholder="Maximum Temperature">
-                <input class="col-lg-12 lifeSpan" type="input" name="vaccineType" placeholder="Life Span">
-            </div>
-            <div>
-                <button id="cancelBtn"> Cancel </button>
-                <button id="addBtn"> Add</button>
+                    <h4 class="addNewVaccineH3"> Storage and Handling</h4>
+                    <input class="col-lg-12 minimumTemperature" type="input" name="vaccineEfficacy" placeholder="Minimum Temperature">
+                    <input class="col-lg-12 maximumTemperature" type="input" name="vaccineType" placeholder="Maximum Temperature">
+                    <input class="col-lg-12 lifeSpan" type="input" name="vaccineType" placeholder="Life Span">
+                </div>
+                <div>
+                    <button id="cancelBtn"> Cancel </button>
+                    <button id="addBtn"> Add</button>
+                </div>
             </div>
         </div>
+
+        <table class="table table-row table-hover">
+            <thead>
+                <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">Vaccine Lot ID</th>
+                    <th scope="col">Vaccine Name</th>
+                    <th scope="col">Date Received</th>
+                    <th scope="col">Date Expiration</th>
+                    <th scope="col">Batch Quantity</th>
+                    <th scope="col">Bottle Quantity</th>
+                    <th scope="col">Action</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr class="table-row" data-href="www.google.com">
+                    <th scope="row">1</th>
+                    <td>SINOVMARCH01</td>
+                    <td>SINOVAC</td>
+                    <td>DECEMBEr 17, 2020</td>
+                    <td>DECEMBEr 17, 2021</td>
+                    <td>500</td>
+                    <td>2020</td>
+                </tr>
+            </tbody>
+        </table>
     </div>
 
-    <table class="table table-row table-hover">
-        <thead>
-            <tr>
-                <th scope="col">#</th>
-                <th scope="col">Vaccine Lot ID</th>
-                <th scope="col">Vaccine Name</th>
-                <th scope="col">Date Received</th>
-                <th scope="col">Date Expiration</th>
-                <th scope="col">Batch Quantity</th>
-                <th scope="col">Bottle Quantity</th>
-                <th scope="col">Action</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr class="table-row" data-href="www.google.com">
-                <th scope="row">1</th>
-                <td>SINOVMARCH01</td>
-                <td>SINOVAC</td>
-                <td>DECEMBEr 17, 2020</td>
-                <td>DECEMBEr 17, 2021</td>
-                <td>500</td>
-                <td>2020</td>
-            </tr>
-        </tbody>
-    </table>
+    <!-- jQuery CDN - Slim version (=without AJAX) -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <!-- Popper.JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
+    <!-- Bootstrap JS -->
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
+
+    <script type="text/javascript">
+        $(document).ready(function() {
+            $('#sidebarCollapse').on('click', function() {
+                $('#sidebar').toggleClass('active');
+            });
+        });
+    </script>
 
     <script>
         var modal = document.getElementById("myModal");
@@ -182,7 +263,6 @@
 </body>
 
 </html>
-
 <style>
     .selectpicker {
         width: 150px;
