--- a/Admin/ManageVaccine.html
+++ b/Admin/ManageVaccine.html
@@ -15,8 +15,8 @@
     <title>Baguio SMIT+</title>
 
     <!-- Our Custom CSS -->
-    <link href="/css/style.css" rel="stylesheet">
-    <link href="../css/cssAdmin.css" rel="stylesheet">
+    <link href="../css/style.css" rel="stylesheet">
+
     <!-- Bootstrap-->
     <script crossorigin="anonymous" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script crossorigin="anonymous" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
@@ -75,7 +75,7 @@
             </ul>
         </nav>
 
-        <!-- Page Content  -->
+        <!-- Top Nav Bar  -->
         <div id="content">
 
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -84,11 +84,20 @@
                     <button type="button" id="sidebarCollapse" class="btn btn-info">
                     <i class="fas fa-align-left"></i>
                     <span>Menu</span>
-                </button>
+                    </button>
+
+                    <button class="btnTop">
+                        <i class="fas fa-bell"></i>
+                    </button>
+
+                    <button class="btnTop">
+                        <i class="fas fa-cog"></i>
+                    </button>
                 </div>
             </nav>
 
-            <button type="button" class="button4 btn-primary" data-toggle="modal" data-target="#add-Vaccine">
+            <!-- Page Content  -->
+            <button type="button" class="buttonTop" data-toggle="modal" data-target="#add-Vaccine">
             Add Vaccine
             </button>
 
@@ -113,15 +122,8 @@
                 </div>
             </div>
 
-            <div class="search-container">
-                <form action="/action_page.php">
-                    <input type="text" placeholder="Search" name="search">
-                    <button type="submit"><i class="fa fa-search"></i>
-            </button>
-                </form>
-            </div>
 
-            <button id="addNewVaccineBtn" type="button" class="button4 btn-primary">
+            <button id="addNewVaccineBtn" type="button" class="buttonTop">
             Add New Vaccine
             </button>
 
@@ -133,29 +135,15 @@
                         <input class="vaccineName col-lg-12" type="input" name="vaccineName" placeholder="Vaccine Name">
                         <input class="vaccineManufacturer col-lg-12" type="input" name="vaccineManufacturer" placeholder="Vaccine Manufacturer">
                         <input class="vaccineDescription col-lg-12" type="input" name="vaccineDescription" placeholder="Vaccine Description">
-
                         <h4 class="addNewVaccineH3">Vaccine Characteristics</h4>
                         <!-- <input class="col-xs-12" type="input" name="vaccineType" placeholder="Vaccine Type"> -->
                         <select class="form-select col-lg-12 vaccineType">
-                    <option selected disabled>Vaccine Type</option>
-                    <option value="1">Inactivated Vaccine</option>
-                    <option value="2">Live-attenuated Vaccine</option>
-                    <option value="3">Viral vector Vaccine</option>
+                            <option selected disabled>Vaccine Type</option>
+                            <option value="1">Inactivated Vaccine</option>
+                            <option value="2">Live-attenuated Vaccine</option>
+                            <option value="3">Viral vector Vaccine</option>
                 </select>
 
-
-                        <!--- <input class="col-xs-12" type="input" name="vaccineEfficacy" placeholder="Vaccine Efficacy">
-                   <div class="dropdown">
-                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Vaccine Efficacy
-                </button>
-                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                        <a class="dropdown-item" href="#">90%</a>
-                        <a class="dropdown-item" href="#">70%</a>
-                        <a class="dropdown-item" href="#">50%</a>
-                    </div>
-                </div>
-                -->
 
                         <select class="form-select col-lg-12 vaccineEfficacy">
                     <option selected disabled>Vaccine Efficacy</option>
@@ -177,6 +165,14 @@
                         <button id="addBtn"> Add</button>
                     </div>
                 </div>
+            </div>
+
+            <div class="search-container">
+                <form action="/action_page.php">
+                    <input type="text" placeholder="Search" name="search">
+                    <button type="submit"><i class="fa fa-search"></i>
+                    </button>
+                </form>
             </div>
 
             <table class="table table-row table-hover">
