--- a/Admin/ManageUsers/managePersonnel.html
+++ b/Admin/ManageUsers/managePersonnel.html
@@ -1,6 +1,6 @@
 <!---/***
 * @Author Krisha Mar M. Macatulad
-* Date Created: July 9, 2021
+* Date Created:
 * Description: Main page of Manage Users
 */
 ---->
@@ -30,7 +30,7 @@
     <form action="/action_page.php">
         <input type="text" placeholder="Search" name="search">
         <button type="submit"><i class="fa fa-search"></i>
-            <img id="searchButton" src="../img/magnifying-glass.png">
+            <img id="searchButton" src="../../img/magnifying-glass.png">
         </button>
     </form>
 </div>
@@ -72,136 +72,163 @@
 <!--Modal for adding personnel-->
 <div id="personnelModal" class="modal">
     <div class="modal-content">
-        <span id = "close1" class="close">&times;</span>
-        <div class="AddNewVaccine-PopUp">
-            <h3>Add USER-Personnel</h3>
-            <h4> Basic Information</h4>
-            <input class="col-xs-12" type="input" name="lastName" placeholder="Last Name">
-            <input class="col-xs-12" type="input" name="firstName" placeholder="First Name">
-            <input class="col-xs-12" type="input" name="middleName" placeholder="Middle Name">
-            <label for="suffix"> Suffix Name </label>
-            <select class="formControl" id="suffix">
-                <option> Sr </option>
-                <option> Jr </option>
-                <option> I </option>
-                <option> II </option>
-                <option> III </option>
-            </select>
+        <div class="modal-header">
+            <h4 class="modal-title">Add USER-Personnel</h4>
+            <button type="button" id="close1" class="close" data-dismiss="modal">&times;</button>
+        </div>
+        <div class="modal-body">
+            <div class="AddNewVaccine-PopUp">
+                <h5> Basic Information</h5>
+                <div class="row">
+                    <div class="col-sm">
+                        <label for="lname">Last Name</label>
+                        <input type="text" id="lname" class='input' name="lastname" placeholder="Input Last Name"><br>
 
-            <label for="role"> Role </label>
-            <select class="formControl" id="role">
-                <option> City Hall Employee </option>
-                <option> Vaccination Personnel </option>
-            </select>
-            <input class="col-xs-12" type="input" name="contactNumber" placeholder="Contact Number">
+                        <label for="fname">First Name</label><br>
+                        <input type="text" id="fname" class='input' name="firstname" placeholder="Input First Name"><br>
 
+                        <label for="mname">Middle Name</label><br>
+                        <input type="text" id="mname" class='input' name="middlename" placeholder="Input Middle Name">
+
+                        <label for="suffix">Suffix</label><br>
+                        <select id="suffix" name="suffix">
+                            <option value="">None</option>
+                            <option value="sr"> Sr </option>
+                            <option> Jr </option>
+                            <option> I </option>
+                            <option> II </option>
+                            <option> III </option>
+                        </select>
+
+                    </div>
+                    <div class="col-sm">
+                        <label for="role">Role</label><br>
+                        <select id="role" name="suffix">
+                            <option value="" disabled selected hidden>Select a Role...</option>
+                            <option> City Hall Employee </option>
+                            <option> Vaccination Personnel </option>
+                        </select>
+                        <label for="contactNumber"> Contact Number </label>
+                        <input type="text" class="formControl" id="contactNumber" name="contactNumber" placeholder="+639">
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" id="cancel" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                    <button type="button" id="next" class="btn btn-primary" data-dismiss="modal">Next</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!--Modal for personnel credentials-->
+    <div id="addButtonModal" class="modal">
+        <div class="modal-content">
+            <span id = "close2" class="close">&times;</span>
+            <h5> Here are the patients credentials. </h5>
+            <input class="col-xs-12" type="input" name="username" placeholder="Username" disabled>
+            <input class="col-xs-12" type="input" name="password" placeholder="Password" disabled>
+            <button id = 'save'> Save </button>
         </div>
 
-        <button id = "cancel"> Cancel </button>
-        <button id = 'Add'> Add </button>
-
-    </div>
-</div>
-
-<!--Modal for personnel credentials-->
-<div id="addButtonModal" class="modal">
-    <div class="modal-content">
-        <span id = "close2" class="close">&times;</span>
-        <h5> Here are the patients credentials. </h5>
-        <input class="col-xs-12" type="input" name="username" placeholder="Username" disabled>
-        <input class="col-xs-12" type="input" name="password" placeholder="Password" disabled>
-        <button id = 'Add2'> Add </button>
     </div>
 
-</div>
+    <!--Modal for successful notification-->
+    <div id="notifyModal" class="modal">
+        <div class="modal-content">
+            <span id = "close3" class="close">&times;</span>
+            <br>
+            <img src="../../img/checkmark.png">
+            <p> <center> User Personnel successfully added. </center> </p>
+            <button id = 'exit'> Close </button>
+        </div>
+        <!--instead of close change to Done-->
 
-<!--Modal for successful notification-->
-<div id="notifyModal" class="modal">
-    <div class="modal-content">
-        <span id = "close3" class="close">&times;</span>
-        <br>
-        <img src="../img/checkmark.png">
-        <p> User Personnel successfully added. </p>
-        <button id = 'exit'> Close </button>
     </div>
-    <!--instead of close change to Done-->
 
-</div>
+    <script>
+        //modals
+        var modal = document.getElementById("personnelModal");
+        var addModal = document.getElementById("addButtonModal");
+        var notifyModal = document.getElementById("notifyModal");
+        var uploadFileModal = document.getElementById("uploadFileModal")
 
-<script>
-    var modal = document.getElementById("personnelModal");
-    var addModal = document.getElementById("addButtonModal");
-    var notifyModal = document.getElementById("notifyModal");
-    var uploadFileModal = document.getElementById("uploadFileModal")
-    var addUserBtn = document.getElementById("addUserBtn");
-    var uploadFileBtn = document.getElementById("uploadFile")
-    var span = document.getElementById("close");
-    var span1 = document.getElementById("close1");
-    var span2 = document.getElementById("close2");
-    var span3 = document.getElementById("close3");
-    var cancel = document.getElementById("cancel");
-    var exit = document.getElementById('exit')
-    var add = document.getElementById("Add");
-    var add2 = document.getElementById("Add2");
+        //buttons
+        var addUserBtn = document.getElementById("addUserBtn");
+        var uploadFileBtn = document.getElementById("uploadFile")
 
-    //upload file button
-    uploadFileBtn.onclick = function (){
-        uploadFileModal.style.display = "block";
-    }
-    // add button for Add User
-    addUserBtn.onclick = function (){
-        modal.style.display = "block";
-    }
+        //cancel
+        var span = document.getElementById("close");
+        var span1 = document.getElementById("close1");
+        var span2 = document.getElementById("close2");
+        var span3 = document.getElementById("close3");
+        var cancel = document.getElementById("cancel");
 
-    // add button after input of personnel basic info
-    add.onclick = function (){
-        modal.style.display = "none";
-        addModal.style.display = "block";
-    }
+        var exit = document.getElementById('exit')
+        var next = document.getElementById("next");
+        var save = document.getElementById("save");
 
-    add2.onclick = function (){
-        modal.style.display = "none";
-        addModal.style.display = "none";
-        notifyModal.style.display="block";
-    }
 
-    span.onclick = function () {
-        uploadFileModal.style.display = "none";
-    }
+        //upload file button
+        uploadFileBtn.onclick = function (){
+            uploadFileModal.style.display = "block";
+        }
+        // add button for Add User
+        addUserBtn.onclick = function (){
+            modal.style.display = "block";
+        }
 
-    span1.onclick = function () {
-        modal.style.display = "none";
-    }
+        // add button after input of personnel basic info
+        next.onclick = function (){
+            modal.style.display = "none";
+            addModal.style.display = "block";
+        }
 
-    span2.onclick = function (){
-        modal.style.display = "none";
-        addModal.style.display ="none";
-    }
+        save.onclick = function (){
+            modal.style.display = "none";
+            addModal.style.display = "none";
+            notifyModal.style.display="block";
+        }
 
-    span3.onclick = function (){
-        modal.style.display = "none";
-        addModal.style.display ="none";
-        notifyModal.style.display = "none";
-    }
+        span.onclick = function () {
+            uploadFileModal.style.display = "none";
+        }
 
-    exit.onclick = function (){
-        modal.style.display = "none";
-        addModal.style.display ="none";
-        notifyModal.style.display = "none";
-    }
-
-    cancel.onclick = function (){
-        modal.style.display = "none";
-        addModal.style.display = "none";
-        notifyModal.style.display="none"
-    }
-
-    window.onclick = function (event){
-        if(event.target == modal){
+        span1.onclick = function () {
             modal.style.display = "none";
         }
-    }
 
-</script>
+        span2.onclick = function (){
+            modal.style.display = "none";
+            addModal.style.display ="none";
+        }
+
+        span3.onclick = function (){
+            modal.style.display = "none";
+            addModal.style.display ="none";
+            notifyModal.style.display = "none";
+        }
+
+        exit.onclick = function (){
+            modal.style.display = "none";
+            addModal.style.display ="none";
+            notifyModal.style.display = "none";
+        }
+
+        cancel.onclick = function (){
+            modal.style.display = "none";
+            addModal.style.display = "none";
+            notifyModal.style.display="none"
+        }
+
+        window.onclick = function (event){
+            if(event.target == modal || event.target == addModal || event.target == notifyModal || event.target == uploadFileModal){
+                modal.style.display = "none";
+                addModal.style.display = "none";
+                uploadFileModal.style.display = "none";
+                notifyModal.style.display = "none";
+            }
+        }
+
+    </script>
 </body>
 </html>
