--- a/Admin/ManageReport.html
+++ b/Admin/ManageReport.html
@@ -1,18 +1,11 @@
-<!---/***
-* @Author Hudson Kit P. Natividad & Leslie Joy Palma
-* Date Created: June 28, 2021
-* Description: Main page of Manage Reports
-*/
----->
 <!DOCTYPE html>
-<html>
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>SMIT+ | Manage Vaccine</title>
+    <title>SMIT+ | Manage Reports</title>
 
     <!-- Our Custom CSS -->
     <link href="../css/style.css" rel="stylesheet">
@@ -97,111 +90,98 @@
             </nav>
 
             <!-- Page Content  -->
-            <button type="button" class="buttonTop" data-toggle="modal" data-target="#add-Vaccine">
-            Add Vaccine
+            <button type="button" class="buttonTop" data-toggle="modal" data-target="#exampleModalLong">
+                Generate Report
             </button>
 
-            <div class="modal fade" id="addVaccine" tabindex="-1" role="dialog" aria-labelledby="add-Vaccine" aria-hidden="true">
+            <div class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
                 <div class="modal-dialog" role="document">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h5 class="modal-title" id="add-VaccineTitle">Add Vaccine</h5>
+                            <h5 class="modal-title" id="exampleModalLongTitle">Generate Report</h5>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
+                                <span aria-hidden="true">&times;</span>
+                            </button>
                         </div>
                         <div class="modal-body">
-
+                            ...
                         </div>
                         <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                             <button type="button" class="btn btn-primary">Save Changes</button>
-                            <button type="button" class="btn btn-secondary">Close</button>
                         </div>
                     </div>
                 </div>
             </div>
 
-
-            <button id="addNewVaccineBtn" type="button" class="buttonTop">
-            Add New Vaccine
-            </button>
-
-            <div id="myModal" class="modal">
-                <div class="modal-content container">
-                    <h2 id="headerAddNewVaccine">Add New Vaccine<span id="close" class="close">&times;</span></h2>
-                    <div class="AddNewVaccine-PopUp">
-                        <h4 class="addNewVaccineH3">Vaccine Details</h4>
-                        <input class="vaccineName col-lg-12" type="input" name="vaccineName" placeholder="Vaccine Name">
-                        <input class="vaccineManufacturer col-lg-12" type="input" name="vaccineManufacturer" placeholder="Vaccine Manufacturer">
-                        <input class="vaccineDescription col-lg-12" type="input" name="vaccineDescription" placeholder="Vaccine Description">
-                        <h4 class="addNewVaccineH3">Vaccine Characteristics</h4>
-                        <!-- <input class="col-xs-12" type="input" name="vaccineType" placeholder="Vaccine Type"> -->
-                        <select class="form-select col-lg-12 vaccineType">
-                            <option selected disabled>Vaccine Type</option>
-                            <option value="1">Inactivated Vaccine</option>
-                            <option value="2">Live-attenuated Vaccine</option>
-                            <option value="3">Viral vector Vaccine</option>
-                </select>
-
-
-                        <select class="form-select col-lg-12 vaccineEfficacy">
-                    <option selected disabled>Vaccine Efficacy</option>
-                    <option value="1">90%</option>
-                    <option value="1">70%</option>
-                    <option value="1">50%</option>
-                </select>
-
-                        <input class="col-lg-12 dosageRequired" type="input" name="vaccineType" placeholder="Dosage Required">
-                        <input class="col-lg-12 dosageInterval" type="input" name="vaccineType" placeholder="Dosage Interval">
-
-                        <h4 class="addNewVaccineH3"> Storage and Handling</h4>
-                        <input class="col-lg-12 minimumTemperature" type="input" name="vaccineEfficacy" placeholder="Minimum Temperature">
-                        <input class="col-lg-12 maximumTemperature" type="input" name="vaccineType" placeholder="Maximum Temperature">
-                        <input class="col-lg-12 lifeSpan" type="input" name="vaccineType" placeholder="Life Span">
-                    </div>
-                    <div>
-                        <button id="cancelBtn"> Cancel </button>
-                        <button id="addBtn"> Add</button>
-                    </div>
-                </div>
-            </div>
-
+            <!--Search Input and Button-->
             <div class="search-container">
                 <form action="/action_page.php">
-                    <input type="text" placeholder="Search" name="search">
+                    <input type="text1" placeholder="Search" name="search">
                     <button type="submit"><i class="fa fa-search"></i>
                     </button>
                 </form>
             </div>
 
-            <table class="table table-row table-hover">
+            <!--Table Part-->
+            <table class="table table-row table-hover tableReport">
                 <thead>
                     <tr>
                         <th scope="col">#</th>
-                        <th scope="col">Vaccine Lot ID</th>
-                        <th scope="col">Vaccine Name</th>
-                        <th scope="col">Date Received</th>
-                        <th scope="col">Date Expiration</th>
-                        <th scope="col">Batch Quantity</th>
-                        <th scope="col">Bottle Quantity</th>
+                        <th scope="col">Report ID</th>
+                        <th scope="col">Name of Reporter</th>
+                        <th scope="col">Date Reported</th>
+                        <th scope="col">Report Verified</th>
                         <th scope="col">Action</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr class="table-row" data-href="www.google.com">
                         <th scope="row">1</th>
-                        <td>SINOVMARCH01</td>
-                        <td>SINOVAC</td>
-                        <td>DECEMBEr 17, 2020</td>
-                        <td>DECEMBEr 17, 2021</td>
-                        <td>500</td>
-                        <td>2020</td>
+                        <td>87792</td>
+                        <td>Chandler Muriel Bing</td>
+                        <td>JANUARY 21, 2021</td>
+                        <td>Pending</td>
+                        <td><button id="reviewReportBtn">Review Report</button></td>
                     </tr>
                 </tbody>
             </table>
+            <!---Counter Report-->
+            <div class="CounterReportContainer">
+                <div class="row">
+                    <div class="four col-md-3">
+                        <div class="counter-box colored">
+                            </i> <span class="counter">2147</span>
+                            <p>Total Reports</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="four col-md-3">
+                        <div class="counter-box"> <span class="counter">3275</span>
+                            <p>Total of Unverified Reports</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="four col-md-3">
+                        <div class="counter-box"> <span class="counter">289</span>
+                            <p>Total of Verified Reports</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="four col-md-3">
+                        <div class="counter-box"> <span class="counter">1563</span>
+                            <p>Total of Invalidated Reports</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
 
+
+        <!-- Additional Scripts-->
         <!-- jQuery CDN - Slim version (=without AJAX) -->
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <!-- Popper.JS -->
