--- a/Admin/resetPW.html
+++ b/Admin/resetPW.html
@@ -29,9 +29,9 @@
     </div>
 </body>
 <footer>
-    <div class="text-center p-4">
+    <div>
         © 2021 Copyright:
-        <a class="text-reset fw-bold" href="https://baguiosmit+.com/">BaguioSmit+.com</a>
+        <a href="https://baguiosmit+.com/">BaguioSmit+.com</a>
     </div>
 </footer>
 
@@ -101,19 +101,15 @@
         text-align: center;
     }
     
-    #pfooter {
-        text-align: center;
-        color: white;
-        background-color: #04628A;
-    }
-    
     footer {
-        margin: 4% 0 0 0;
+        bottom: 0;
         padding: 0;
         color: white;
         background-color: #04628A;
         position: absolute;
-        bottom: 0;
         width: 100%;
+        text-align: center;
+        font-size: 1rem;
+        margin: 0;
     }
 </style>
