--- a/Admin/ManageUsers/ManagePatient2.html
+++ b/Admin/ManageUsers/ManagePatient2.html
@@ -1,5 +1,5 @@
 <!---/***
-* @Author Hudson Kit P. Natividad & Leslie Joy Palma
+* @Author Krisha Mar Macatulad, Hudson Kit P. Natividad
 * Date Created: June 28, 2021
 * Description: Main page of Manage Reports
 */
@@ -11,11 +11,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
     <!-- Title -->
-    <title>SMIT+ | Manage Vaccine</title>
+    <title>SMIT+ | Manage Patients</title>
 
     <!-- Our Custom CSS -->
-    <link href="../css/style.css" rel="stylesheet">
+    <link href="../../css/style.css" rel="stylesheet">
 
     <!-- Bootstrap-->
     <script crossorigin="anonymous" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
@@ -34,7 +35,7 @@
         <nav id="sidebar">
             <div class="sidebar-header">
                 <div class="sidebar-brand-icon">
-                    <img style="width:150px;" src="../img/SMIT+.png" alt="Baguio Logo">
+                    <img style="width:150px;" src="../../img/SMIT+.png" alt="Baguio Logo">
                 </div>
             </div>
 
@@ -97,61 +98,92 @@
             </nav>
 
             <!-- Page Content  -->
-            <button id="addVaccine" type="button" class="buttonTop">Add Vaccine</button>
 
+            <!--Button for Uploading File-->
+            <button id="addNewVaccineBtn" type="button" class="buttonTop">Upload File</button>
+
+            <!--Modal for uploading patient csv-->
+            <!--To include uploading files limited to csv file only-->
+            <div id="myModal" class="modal">
+                <div class="modal-content">
+                    <h3> Upload File/s<span id="close" class="close">&times;</span></h3>
+                    <div id="uploadingFile">
+                        <p>Upload a list of patients (.csv) <br> or </p>
+                        <input type="file" class="form-control" id="fileUpload" multiple/>
+                        <button id="browse" type="button" class="'button4 btn-primary"> Browse </button>
+                    </div>
+
+                    <div id="listFile">
+                        <!--temporary uploading-->
+                        <h6> Uploaded Files </h6>
+                        <p> prereg_09-19-2021_validates.csv</p>
+                        <p> prereg_09-21-2021_validates.csv</p>
+                    </div>
+
+                </div>
+
+            </div>
+
+            <!--Button for Adding Patient Details-->
+            <button id="addVaccine" type="button" class="buttonTop">Add User</button>
+
+            <!--Modal for Adding patient -->
             <div id="modal2" class="modal">
                 <div class="modal-content container">
-                    <h2 id="headerAddNewVaccine">Add Vaccine<span id="close2" class="close">&times;</span></h2>
+                    <!-- <span id="exit1" class="close">&times;</span> -->
+                    <h3>Add User | Patient<span id="close2" class="close">&times;</span></h3>
+                    <div class="addUser-PopUp">
+                        <h4> Basic Information</h4>
+                        <input class="col-xs-12" type="input" name="lastName" placeholder="Last Name">
+                        <input class="col-xs-12" type="input" name="firstName" placeholder="First Name">
+                        <input class="col-xs-12" type="input" name="middleName" placeholder="Middle Name">
+                        <label for="suffix"> Suffix Name </label>
+                        <select class="formControl" id="suffix">
+                            <option> Sr </option>
+                            <option> Jr </option>
+                            <option> I </option>
+                            <option> II </option>
+                            <option> III </option>
+                        </select>
+
+                        <label for="category"> Category </label>
+                        <select class="formControl" id="category">
+                            <option> A1 </option>
+                            <option> A2 </option>
+                            <option> A3 </option>
+                            <option> A4 </option>
+                            <option> A5 </option>
+                        </select>
+
+                        <h4> Address </h4>
+                        <input class="col-xs-12" type="input" name="street" placeholder="Street Name">
+                        <input class="col-xs-12" type="input" name="city" placeholder="City/Town">
+                        <input class="col-xs-12" type="input" name="state" placeholder="State/Province">
+                        <input class="col-xs-12" type="input" name="zip" placeholder="Postal/Zip Code">
+
+                        <label for="date"> Birthdate </label>
+                        <input type="date" id="date" name="date">
+
+                        <label for="gender"> Gender </label>
+                        <select class="formControl" id="gender">
+                            <option> Male </option>
+                            <option> Female </option>
+                        </select>
+
+                        <input class="col-xs-12" type="input" name="contactNum" placeholder="Contact Number">
+                        <input class="col-xs-12" type="input" name="occupation" placeholder="Occupation">
+
+                    </div>
+                    <button id="next"> Next </button>
                 </div>
             </div>
 
-
-            <button id="addNewVaccineBtn" type="button" class="buttonTop">Add New Vaccine</button>
-
-            <div id="myModal" class="modal">
-                <div class="modal-content container">
-                    <h2 id="headerAddNewVaccine">Add New Vaccine<span id="close" class="close">&times;</span></h2>
-                    <div class="AddNewVaccine-PopUp">
-                        <h4 class="addNewVaccineH3">Vaccine Details</h4>
-                        <input class="vaccineName col-lg-12" type="input" name="vaccineName" placeholder="Vaccine Name">
-                        <input class="vaccineManufacturer col-lg-12" type="input" name="vaccineManufacturer" placeholder="Vaccine Manufacturer">
-                        <input class="vaccineDescription col-lg-12" type="input" name="vaccineDescription" placeholder="Vaccine Description">
-                        <h4 class="addNewVaccineH3">Vaccine Characteristics</h4>
-                        <!-- <input class="col-xs-12" type="input" name="vaccineType" placeholder="Vaccine Type"> -->
-                        <select class="form-select col-lg-12 vaccineType">
-                            <option selected disabled>Vaccine Type</option>
-                            <option value="1">Inactivated Vaccine</option>
-                            <option value="2">Live-attenuated Vaccine</option>
-                            <option value="3">Viral vector Vaccine</option>
-                        </select>
-
-
-                        <select class="form-select col-lg-12 vaccineEfficacy">
-                            <option selected disabled>Vaccine Efficacy</option>
-                            <option value="1">90%</option>
-                            <option value="1">70%</option>
-                            <option value="1">50%</option>
-                        </select>
-
-                        <input class="col-lg-12 dosageRequired" type="input" name="vaccineType" placeholder="Dosage Required">
-                        <input class="col-lg-12 dosageInterval" type="input" name="vaccineType" placeholder="Dosage Interval">
-
-                        <h4 class="addNewVaccineH3"> Storage and Handling</h4>
-                        <input class="col-lg-12 minimumTemperature" type="input" name="vaccineEfficacy" placeholder="Minimum Temperature">
-                        <input class="col-lg-12 maximumTemperature" type="input" name="vaccineType" placeholder="Maximum Temperature">
-                        <input class="col-lg-12 lifeSpan" type="input" name="vaccineType" placeholder="Life Span">
-                    </div>
-                    <div>
-                        <button id="cancelBtn"> Cancel </button>
-                        <button id="addBtn"> Add</button>
-                    </div>
-                </div>
-            </div>
-
+            <!-- Search Container-->
             <div class="search-container">
                 <form action="/action_page.php">
                     <input type="text" placeholder="Search" name="search">
-                    <button type="submit"><i class="fa fa-search"></i></button>
+                    <button type="submit"><i class="fa fa-search"></i>
+                    </button>
                 </form>
             </div>
 
@@ -159,24 +191,21 @@
                 <thead>
                     <tr>
                         <th scope="col">#</th>
-                        <th scope="col">Vaccine Lot ID</th>
-                        <th scope="col">Vaccine Name</th>
-                        <th scope="col">Date Received</th>
-                        <th scope="col">Date Expiration</th>
-                        <th scope="col">Batch Quantity</th>
-                        <th scope="col">Bottle Quantity</th>
+                        <th scope="col">Patient ID</th>
+                        <th scope="col">Patient Name</th>
+                        <th scope="col">Complete Address</th>
+                        <th scope="col">Contact Number</th>
                         <th scope="col">Action</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr class="table-row" data-href="www.google.com">
                         <th scope="row">1</th>
-                        <td>SINOVMARCH01</td>
-                        <td>SINOVAC</td>
-                        <td>DECEMBEr 17, 2020</td>
-                        <td>DECEMBEr 17, 2021</td>
-                        <td>500</td>
-                        <td>2020</td>
+                        <td>2191542</td>
+                        <td>NATIVIDAD, HUDSON KIT P.</td>
+                        <td>#278 MIDDLE QUARRY B.C.</td>
+                        <td>09212893456</td>
+                        <td></td>
                     </tr>
                 </tbody>
             </table>
@@ -237,15 +266,6 @@
                 alert("changes has been saved!");
             }
         </script>
-
-        <script>
-            $(document).ready(function($) {
-                $(".table-row").click(function() {
-                    window.document.location = $(this).data("href");
-                });
-            });
-        </script>
-
 </body>
 
 </html>
