started patient module with its login

--- a/Admin/ManageDep.html
+++ b/Admin/ManageDep.html
@@ -20,7 +20,7 @@
     <title>SMIT+ | Manage Deployment</title>
 
     <!-- Our Custom CSS -->
-    <link href="../../css/style.css" rel="stylesheet">
+    <link href="../css/style.css" rel="stylesheet">
     <!-- <link href="../css/cssAdmin.css" rel="stylesheet"> -->
 
     <!-- Bootstrap-->
